# piramid

./: .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile  OPENSOURCE_READY.md  README.md  REFACTOR_SEARCH.md  demo_vectors.db.index  docker-compose.prod.yml  docker-compose.yml  test.wal  test_batch_search.wal  test_filtered_search.db.index  test_filtered_search.wal  test_search.wal  test_vector_search.db.index  test_vector_search.wal
.github/workflows/: README.md  security.yml  website.yml
.piramid/tests/: test_batch_search.wal  test_persist.db.metadata.db  test_search.wal  test_vector_search.index.db  test_vector_search.wal
archive/rusty-do/: Cargo.toml  db.json
archive/rusty-do/src/: models.rs
archive/rusty-kv/: database.db
archive/rusty-kv/src/: database.db  entry.rs  lib.rs  main.rs
assets/: ascii_motion_frames.rs_inc
benches/: hnsw_accuracy.rs  hnsw_performance.rs
dashboard/: README.md
dashboard/app/: layout.tsx  page.tsx
dashboard/app/components/: BrowseTab.tsx  EmbedTab.tsx  ErrorDisplay.tsx  OverviewTab.tsx  SearchTab.tsx  Sidebar.tsx
dashboard/app/lib/: api.ts
docs/: CONTRIBUTION.md  GET_STARTED.md  TODO.md  _sidebar.json  index.md
docs/api/: schemas.md
docs/architecture/: embeddings.md  indexing.md  storage.md
docs/configuration/: env.md
docs/contributing/: index.md
docs/operations/: health.md  logging.md  maintenance.md
docs/overview/: history.md  index.md
examples/: README.md  basic.rs  embeddings.rs
examples/batch/: batch_insert.rs  batch_search.rs
examples/index/: hnsw_config.rs  hnsw_persistence.rs  hnsw_vs_bruteforce.rs
examples/integration/: complete_workflow.rs  rag_example.rs  semantic_search.rs
examples/metadata/: basic_metadata.rs  filter_operations.rs
examples/quantization/: scalar_quantization.rs
examples/search/: filtered_search.rs  knn_search.rs  similarity_metrics.rs
examples/storage/: basic_storage.rs  mmap_efficiency.rs  persistence.rs
examples/wal/: checkpointing.rs  crash_recovery.rs
rusty-do/: db.json
rusty-do/src/: db.json  main.rs  tui.rs
rusty-kv/: README.md
rusty-kv/src/: entry.rs  lib.rs  main.rs
sdk/npm/: index.js
sdk/pip/: README.md
src/: README.md  config.rs  error.rs  get-started.md  lib.rs  metadata.rs  search.rs  storage.rs  validation.rs  wal.rs
src/cli/: animation.rs
src/config/: app.rs  collection.rs  execution.rs  loader.rs  mod.rs  search.rs  wal.rs
src/embeddings/: cache.rs  mod.rs  ollama.rs  openai.rs  providers.rs  retry.rs  types.rs
src/embeddings/providers/: factory.rs  local.rs  mod.rs  ollama.rs  openai.rs
src/error/: context.rs  embedding.rs  index.rs  mod.rs  server.rs  storage.rs  types.rs
src/index/: hnsw.rs  mod.rs  selector.rs  traits.rs
src/index/flat/: config.rs  index.rs
src/index/hnsw/: config.rs  graph.rs  mod.rs
src/index/ivf/: index.rs
src/metrics/: cosine.rs  dot.rs  euclidean.rs  latency.rs  mod.rs
src/metrics/cosine/: binary.rs  jit.rs  mod.rs  parallel.rs  scalar.rs  simd.rs
src/metrics/dot/: binary.rs  jit.rs  mod.rs  parallel.rs  scalar.rs  simd.rs
src/metrics/euclidean/: binary.rs  jit.rs  mod.rs  parallel.rs  scalar.rs  simd.rs
src/quantization/: mod.rs
src/query/: filter.rs
src/search/: engine.rs  filtered.rs  mod.rs  types.rs  utils.rs  vector.rs
src/search/engines/: filtered.rs  mod.rs  vector.rs
src/search/query/: filter.rs  mod.rs
src/server/: handlers.rs  helpers.rs  lock_helpers.rs  metrics.rs  mod.rs  request_id.rs  routes.rs  state.rs  sync.rs  types.rs
src/server/handlers/: collections.rs  config.rs  embeddings.rs  health.rs  mod.rs  ready.rs  vectors.rs
src/server/types/: range.rs
src/storage/: collection.rs  collection_metadata.rs  collection_old.rs.bak  entry.rs  metadata.rs  mod.rs  vector_storage.rs  wal.rs
src/storage/collection/: builder.rs  cache.rs  dup.rs  mod.rs  operations.rs  persistence.rs  persistence_service.rs  search.rs  storage.rs
src/storage/utils/: index_persist.rs  metadata_persist.rs  mod.rs
src/storage/wal/: entry.rs  log.rs
tests/: collection.rs  embeddings.rs  embeddings_cache.rs  filter.rs  indexes.rs  latency.rs  metadata.rs  metrics.rs  quantization.rs  search_engine.rs  storage_metadata.rs  validation.rs
website/: mdx-components.tsx  package-lock.json  package.json
website/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
website/app/blogs/: layout.tsx  page.tsx
website/app/blogs/[...slug]/: page.tsx
website/app/docs/: layout.tsx  page.tsx
website/app/docs/[...slug]/: page.tsx
website/components/: DocsPager.tsx  DocsSearchLauncher.tsx  DocsSidebar.tsx  DocsSidebarMobile.tsx  DocsToc.tsx
website/lib/: blogs.ts  docs.ts
website/scripts/: sync-docs.mjs
