[package]
name = "piramid"
version = "0.1.0"
edition = "2021"

[lib]
name = "piramid"
crate-type = ["rlib"] 

[[bin]]
name = "piramid-server"
path = "src/bin/server.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

# UUID for document IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"

# HTTP server (like HelixDB)
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# HTTP client for embedding providers
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

[dev-dependencies]
# For testing
