[package]
name = "piramid"
version = "0.1.0"
edition = "2021"

[lib]
name = "piramid"
crate-type = ["rlib"] 

[[bin]]
name = "piramid-server"
path = "src/bin/server.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
# UUID for document IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"

# HTTP server 
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# HTTP client for embedding providers
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
rand = "0.8"

# SIMD acceleration
wide = "0.7"

# Memory optimization
memmap2 = "0.9"

# Cache optimization 
lru="0.16.3"

# Parallel processing
rayon = "1.10"

[dev-dependencies]
# Logging
log = "0.4"

# For testing
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
name = "hnsw_performance"
harness = false


[[bench]]
name = "hnsw_accuracy"
harness = false
