[package]
name = "piramid"
version = "0.1.0"
edition = "2021"

[lib]
name = "piramid"
crate-type = ["rlib"] 

[[bin]]
name = "piramid-server"
path = "src/bin/server.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
# UUID for document IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"

# HTTP server 
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }

# HTTP client for embedding providers
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
rand = "0.8"

# SIMD acceleration
wide = "0.7"

# Memory optimization
memmap2 = "0.9"

# Cache optimization 
lru="0.16.3"

# Parallel processing
rayon = "1.10"

[dev-dependencies]
# Logging
log = "0.4"

# For testing
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
name = "hnsw_performance"
harness = false


[[bench]]
name = "hnsw_accuracy"
harness = false

# Examples
[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "embeddings"
path = "examples/embeddings.rs"

# Storage examples
[[example]]
name = "basic_storage"
path = "examples/storage/basic_storage.rs"

[[example]]
name = "persistence"
path = "examples/storage/persistence.rs"

[[example]]
name = "mmap_efficiency"
path = "examples/storage/mmap_efficiency.rs"

# Search examples
[[example]]
name = "similarity_metrics"
path = "examples/search/similarity_metrics.rs"

[[example]]
name = "knn_search"
path = "examples/search/knn_search.rs"

[[example]]
name = "filtered_search"
path = "examples/search/filtered_search.rs"

# Metadata examples
[[example]]
name = "basic_metadata"
path = "examples/metadata/basic_metadata.rs"

[[example]]
name = "filter_operations"
path = "examples/metadata/filter_operations.rs"

# Batch examples
[[example]]
name = "batch_insert"
path = "examples/batch/batch_insert.rs"

[[example]]
name = "batch_search"
path = "examples/batch/batch_search.rs"

# Index examples
[[example]]
name = "hnsw_config"
path = "examples/index/hnsw_config.rs"

[[example]]
name = "hnsw_vs_bruteforce"
path = "examples/index/hnsw_vs_bruteforce.rs"

[[example]]
name = "hnsw_persistence"
path = "examples/index/hnsw_persistence.rs"

# Quantization examples
[[example]]
name = "scalar_quantization"
path = "examples/quantization/scalar_quantization.rs"

# WAL examples
[[example]]
name = "crash_recovery"
path = "examples/wal/crash_recovery.rs"

[[example]]
name = "checkpointing"
path = "examples/wal/checkpointing.rs"

# Integration examples
[[example]]
name = "rag_example"
path = "examples/integration/rag_example.rs"

[[example]]
name = "semantic_search"
path = "examples/integration/semantic_search.rs"

[[example]]
name = "complete_workflow"
path = "examples/integration/complete_workflow.rs"
